# boss

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  TODO.md  package.json
crates/core/boss-calendar/: Cargo.toml
crates/core/boss-calendar-client/: Cargo.toml
crates/core/boss-calendar-client/src/: lib.rs
crates/core/boss-calendar/src/: calendar_config.rs  events.rs  http.rs  in_memory.rs  lib.rs  port.rs  postgres.rs  rebuild.rs
crates/core/boss-calendar/tests/: rebuild_e2e.rs
crates/core/boss-classes/: Cargo.toml
crates/core/boss-classes-client/: Cargo.toml
crates/core/boss-classes-client/src/: lib.rs
crates/core/boss-classes/src/: classes_config.rs  http.rs  in_memory.rs  lib.rs  port.rs  postgres.rs
crates/core/boss-clock/: Cargo.toml
crates/core/boss-clock-client/: Cargo.toml
crates/core/boss-clock-client/src/: lib.rs
crates/core/boss-clock/src/: http.rs  lib.rs  postgres.rs  types.rs
crates/core/boss-content/: Cargo.toml
crates/core/boss-content/seeds/: manual_starter.toml
crates/core/boss-content/src/: config.rs  error.rs  events.rs  http.rs  in_memory.rs  lib.rs  port.rs  postgres.rs  rebuild.rs  seed.rs  types.rs
crates/core/boss-content/tests/: bulletins_e2e.rs  files_e2e.rs  manual_e2e.rs  rebuild_e2e.rs
crates/core/boss-core/: Cargo.toml
crates/core/boss-core/src/: actor.rs  actor_context.rs  agent.rs  audit.rs  calendar.rs  clock.rs  config.rs  event.rs  http_client.rs  id.rs  job.rs  knowledge.rs  lib.rs  money.rs  port.rs  primitives.rs  publisher.rs  rebuild.rs  roles.rs  sim_origin.rs  startup.rs
crates/core/boss-core/tests/: composite_properties.proptest-regressions
crates/core/boss-cybernetics/: Cargo.toml
crates/core/boss-cybernetics/src/: config.rs  http.rs  ingress.rs  lib.rs  runtime.rs  scheduler.rs  telemetry.rs
crates/core/boss-cybernetics/tests/: http_introspection.rs  ingress_bridge.rs  loop_end_to_end.rs
crates/core/boss-dispatcher/: Cargo.toml
crates/core/boss-dispatcher/src/: cascade.rs  config.rs  dispatcher.rs  http.rs  lib.rs  liveness.rs
crates/core/boss-dispatcher/tests/: delegate_subjob_smoke.rs  dispatcher_rule_authoring_e2e.rs  dispatcher_rules_seed.rs
crates/core/boss-docs/: Cargo.toml
crates/core/boss-docs/src/: config.rs  http.rs  in_memory.rs  lib.rs  parser.rs  port.rs  postgres.rs  reindex.rs  types.rs
crates/core/boss-docs/tests/: docs_corpus_presents.rs  parse_real_doc.rs  schema_status_agreement_pg.rs
crates/core/boss-events/: Cargo.toml
crates/core/boss-events/seeds/: audit_invariant_rules.toml
crates/core/boss-events/src/: audit_pg.rs  bus.rs  claude_dispatcher.rs  dispatcher.rs  events_api_config.rs  integrity.rs  ledger.rs  lib.rs  messages_events_pg.rs  outbox.rs  queue.rs  registry.rs  replay.rs  store.rs  tail_http.rs
crates/core/boss-events/tests/: audit_immutability.rs  audit_pg.rs  outbox_pg.rs  subject_edges_pg.rs  tail_http.rs
crates/core/boss-expr/: Cargo.toml
crates/core/boss-expr/fuzz/: Cargo.toml
crates/core/boss-expr/src/: lib.rs
crates/core/boss-gateway/: Cargo.toml
crates/core/boss-gateway/src/: api.rs  demo_session.rs  lib.rs  local_auth.rs  main.rs  perf.rs  plugin_files.rs  proxy.rs  role_headers.rs  session.rs  static_files.rs  timing.rs
crates/core/boss-jobs/: Cargo.toml
crates/core/boss-jobs-client/: Cargo.toml
crates/core/boss-jobs-client/src/: lib.rs
crates/core/boss-jobs/seeds/: step_types.toml
crates/core/boss-jobs/src/: calendar_hook.rs  escalation.rs  events.rs  in_memory.rs  job_kind_lint.rs  jobs_config.rs  lib.rs  owner_resolution.rs  policy_glue.rs  port.rs  postgres.rs  rebuild.rs  registry.rs  seed_loader.rs  step_plugins.rs  step_registry.rs  subject_existence.rs
crates/core/boss-jobs/tests/: human_owner_gate.rs  job_create_version_pin.rs  job_kind_publish_dispatch.rs  job_kind_reconcile_pg.rs  job_kind_registry.rs  policy_gated_handlers.rs  policy_roundtrip_smoke.rs  postgres_filter.rs  rebuild_e2e.rs  restart_epoch_payroll_clear.rs  scheduling_audit_chain.rs  sim_clock_pause_sets_paused_at.rs  step_plugin_registry.rs  subject_existence_gate.rs  subject_existence_pg.rs
crates/core/boss-locations/: Cargo.toml
crates/core/boss-locations-client/: Cargo.toml
crates/core/boss-locations-client/src/: lib.rs
crates/core/boss-locations/src/: http.rs  in_memory.rs  lib.rs  locations_config.rs  port.rs  postgres.rs
crates/core/boss-ml/: Cargo.toml
crates/core/boss-ml/seeds/: phase_two_models.toml
crates/core/boss-ml/src/: bootstrap.rs  config.rs  generators.rs  http.rs  in_memory.rs  inference.rs  lib.rs  port.rs  postgres.rs  types.rs
crates/core/boss-ml/tests/: phase_two_seed_queries_pg.rs
crates/core/boss-nats/: Cargo.toml
crates/core/boss-nats/src/: bus.rs  durable.rs  lib.rs
crates/core/boss-nats/tests/: jetstream_durable.rs  publish_subscribe.rs
crates/core/boss-observability/: Cargo.toml
crates/core/boss-observability/src/: aggregator.rs  config.rs  demo_agents.rs  lib.rs  sse.rs
crates/core/boss-policy/: Cargo.toml
crates/core/boss-policy-client/: Cargo.toml
crates/core/boss-policy-client/src/: defaults.rs  engine.rs  in_memory.rs  lib.rs  port.rs  predicates.rs  seed_loader.rs  types.rs
crates/core/boss-policy/src/: bootstrap.rs  http.rs  lib.rs  postgres.rs
crates/core/boss-policy/tests/: postgres_roundtrip.rs
crates/core/boss-subject-kinds/: Cargo.toml
crates/core/boss-subject-kinds/seeds/: subject_identity_sources.toml
crates/core/boss-subject-kinds/src/: http.rs  in_memory.rs  lib.rs  port.rs  postgres.rs  subject_kinds_config.rs  subjects.rs
crates/core/boss-subject-kinds/tests/: subjects_pg.rs
crates/core/boss-testing/: Cargo.toml
crates/core/boss-testing/src/: assertions.rs  lib.rs  recording_bus.rs  request.rs  test_db.rs
crates/modules/boss-accounts/: Cargo.toml
crates/modules/boss-accounts/src/: account_next_actions.rs  events.rs  (+8 more)
crates/modules/boss-assets/: Cargo.toml
crates/modules/boss-assets-client/: Cargo.toml
crates/modules/boss-campaigns/: Cargo.toml
(+884 files in other folders)
