[package]
name = "boss-calendar"
description = "Global-calendar primitive — one timeline per resource, with race-free hard reservations enforced by a Postgres GIST exclusion constraint."
version.workspace = true
edition.workspace = true

[[bin]]
name = "boss-calendar-api"
path = "src/bin/boss_calendar_api.rs"
required-features = ["postgres"]

[[bin]]
name = "boss-calendar-rebuild"
path = "src/bin/boss_calendar_rebuild.rs"
required-features = ["postgres"]

[features]
default = []
postgres = ["dep:sqlx", "boss-events/postgres"]

[dependencies]
boss-clock-client = { path = "../boss-clock-client" }
boss-ports = { path = "../boss-ports" }
boss-core = { path = "../boss-core" }
boss-policy-client = { path = "../boss-policy-client" }
boss-events = { path = "../boss-events" }
boss-nats = { path = "../boss-nats" }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { version = "0.9", default-features = false, features = ["macros", "runtime-tokio", "postgres", "chrono", "json", "uuid"], optional = true }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
boss-testing = { path = "../boss-testing", features = ["postgres"] }
sqlx = { version = "0.9", default-features = false, features = ["macros", "runtime-tokio", "postgres", "chrono", "json", "uuid"] }
tower = { workspace = true }
http-body-util = "0.1"
async-trait = { workspace = true }
uuid = { version = "1", features = ["v4"] }

[lints]
workspace = true
