[package]
name = "boss-classes-client"
description = "HTTP client port for reaching boss-classes from other services"
version.workspace = true
edition.workspace = true

[dependencies]
boss-core = { path = "../boss-core" }
async-trait = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
chrono = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
