[package]
name = "boss-content"
description = "HR-authored content — bulletin board + company manual"
version.workspace = true
edition.workspace = true

[[bin]]
name = "boss-content-api"
path = "src/bin/boss_content_api.rs"
required-features = ["postgres"]

[[bin]]
name = "boss-content-rebuild"
path = "src/bin/boss_content_rebuild.rs"
required-features = ["postgres"]

[[bin]]
name = "boss-files-gc"
path = "src/bin/boss_files_gc.rs"
required-features = ["postgres"]

[features]
# `postgres` ships in default so `cargo build --release --workspace`
# produces /target/release/boss-content-api + boss-files-gc. No
# orchestrator activates the feature on boss-content, so feature
# unification doesn't reach them → workspace build silently produces
# in-memory-only binaries that fail on startup. Same fix as boss-docs
# (postgres → default 2026-05-05). File-byte storage is local-disk
# (no extra feature / no cloud SDK), so the content-api binary builds
# with just `postgres`.
default = ["postgres"]
postgres = ["dep:sqlx", "boss-events/postgres"]

[dependencies]
boss-clock-client = { path = "../boss-clock-client" }
boss-ports = { path = "../boss-ports" }
boss-core = { path = "../boss-core" }
boss-events = { path = "../boss-events" }
boss-nats = { path = "../boss-nats" }
boss-policy-client = { path = "../boss-policy-client" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true, features = ["multipart"] }
tokio = { workspace = true }
anyhow = { workspace = true }
bytes = "1"
clap = { workspace = true }
toml = { workspace = true }
sqlx = { version = "0.9", default-features = false, features = ["macros", "runtime-tokio", "postgres", "chrono", "json", "uuid"], optional = true }
sha2 = "0.11"
hex = "0.4"

[dev-dependencies]
tower = { workspace = true }
http-body-util = "0.1"
boss-testing = { path = "../boss-testing", features = ["postgres"] }
sqlx = { version = "0.9", default-features = false, features = ["macros", "runtime-tokio", "postgres", "chrono", "json", "uuid"] }

[lints]
workspace = true
