[package]
name = "boss-core"
description = "Core domain types, traits (ports), and event definitions"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.11"
hex = "0.4"

[dev-dependencies]
proptest = "1"
tracing-subscriber = { workspace = true }

[lints]
workspace = true
