[package]
name = "boss-cybernetics"
description = "Per-VM agent runtime: inbox, dispatch, budget enforcement, telemetry"
version.workspace = true
edition.workspace = true

[[bin]]
name = "boss-cybernetics"
path = "src/bin/boss_cybernetics.rs"
required-features = ["postgres"]

[features]
default = ["postgres"]
postgres = ["dep:sqlx", "boss-events/postgres"]

[dependencies]
boss-core = { path = "../boss-core" }
boss-events = { path = "../boss-events" }
boss-nats = { path = "../boss-nats" }
boss-clock-client = { path = "../boss-clock-client" }
sqlx = { version = "0.9", default-features = false, features = ["macros", "runtime-tokio", "postgres", "chrono", "json", "uuid"], optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tower = { workspace = true }

[lints]
workspace = true
