[package]
name = "boss-dispatcher"
description = "Core dispatch engine — the generic, rule-driven side-effect runtime. Owns the Handler trait, the rule registry, the durable NATS consumers, and topic routing; also the step-assignment flow (auto-assigns ready Steps to role-matched Employees). The handler implementations + the service binary live in `boss-dispatcher-handlers` so new side effects land there without changing core."
version.workspace = true
edition.workspace = true

[dependencies]
boss-core = { path = "../boss-core" }
boss-ports = { path = "../boss-ports" }
boss-nats = { path = "../boss-nats" }
boss-jobs = { path = "../boss-jobs" }
boss-expr = { path = "../boss-expr" }
boss-clock-client = { path = "../boss-clock-client" }
boss-calendar-client = { path = "../boss-calendar-client" }
boss-events = { path = "../boss-events" }
anyhow = { workspace = true }
async-nats = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8", default-features = false, features = ["macros", "runtime-tokio", "postgres", "chrono", "json"] }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
boss-testing = { path = "../boss-testing", features = ["postgres"] }

[lints]
workspace = true
