[package]
name = "boss-docs"
description = "Design decision tracker — read-layer over docs/design/*.md with ephemeral decision + flush-job state"
version.workspace = true
edition.workspace = true

[[bin]]
name = "boss-docs-api"
path = "src/bin/boss_docs_api.rs"

[features]
# `postgres` ships in default so `cargo build --release --workspace`
# produces /target/release/boss-docs-api with the postgres adapter.
# No other workspace member depends on boss-docs, so feature
# unification doesn't activate postgres → pre-2026-05-05 the
# workspace build silently produced an in-memory-only binary that
# crashlooped on startup with the "without the postgres feature"
# error. Same fix shape as boss-events::bin (2026-05-05).
default = ["postgres"]
postgres = ["dep:sqlx"]

[dependencies]
boss-core = { path = "../boss-core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
pulldown-cmark = { workspace = true }
uuid = { workspace = true }
sqlx = { version = "0.8", default-features = false, features = ["macros", "runtime-tokio", "postgres", "chrono", "json", "uuid"], optional = true }

[dev-dependencies]
tower = { workspace = true }
http-body-util = "0.1"
boss-testing = { path = "../boss-testing", features = ["postgres"] }
sqlx = { version = "0.8", default-features = false, features = ["macros", "runtime-tokio", "postgres", "chrono", "json"] }

[lints]
workspace = true
