[package]
name = "boss-observability"
description = "Cross-VM observability service: NATS→SSE fan-out + Cybernetics HTTP aggregator"
version.workspace = true
edition.workspace = true

[[bin]]
name = "boss-observability"
path = "src/bin/boss_observability.rs"

[dependencies]
boss-core = { path = "../boss-core" }
boss-nats = { path = "../boss-nats" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
futures = { workspace = true }
async-nats = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tower-http = { version = "0.7", features = ["fs", "trace"] }

[dev-dependencies]
tower = { workspace = true }

[lints]
workspace = true
